# price-tracker

./: .env.example  .gcloudignore  .gitignore  GUIDE.md  README.md  conf.yml  matcher.ipynb  notebook_exploration_ocr.ipynb  requirements.txt  test.ipynb
.claude/: settings.local.json
archive/: README.md  docker-compose.yml  requirements.txt
archive/docs/: architecture.md  bigquery_tables.md
archive/ingestion/: load_insee.py  load_open_prices.py  receive_tickets.py
archive/serving/: schema.sql
backend/: .gcloudignore  Dockerfile  README.md  alembic.ini  cloudbuild.yaml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_bootstrap_init.py  0002_ocr_schema_additions.py
backend/pricetracker_api/: __init__.py  auth.py  bq.py  config.py  db.py  gcs.py  logging.py  main.py
backend/pricetracker_api/models/: __init__.py  notification_prefs.py  prix_extraits.py  product_aliases.py  products.py  tickets.py  user_basket_history.py  users.py
backend/pricetracker_api/routers/: __init__.py  indices.py  observatoire.py  products.py  stats.py  tickets.py  users.py
backend/pricetracker_api/schemas/: __init__.py  indices.py  products.py  tickets.py  users.py
backend/pricetracker_api/services/: __init__.py  user_provisioning.py
backend/tests/: conftest.py  test_auth.py  test_health.py  test_observatoire.py  test_products.py
data/: dictionnaire_libelles.json  ocr_output_example_1.json  ocr_output_example_2.json  ocr_output_example_3.json  ocr_output_example_4.json  ocr_output_example_5.json  ocr_output_example_6.json  price_tracker.db  produits_canoniques.json
dev_ocr/: .env.example  .gitignore  README.md  conftest.py  documentation.md  etapes_implementation_ocr.md  journal_dev_ocr.md  ocr-worker-contract.md  project_guidelines.md  pyproject.toml  requirements-groq.txt  requirements-vlm.txt  requirements.txt  vlm_test_output.txt
dev_ocr/data/raw/huggingface/shirastromer__supermarket-receipts/: README.md
dev_ocr/data/raw/huggingface/shirastromer__supermarket-receipts/data/: test-00000-of-00001.parquet  train-00000-of-00001.parquet
dev_ocr/data/raw/kaggle/sushmithanarayan__expenses-receipt-ocr/: KAGGLEHUB_PATH.txt
dev_ocr/data/raw/ocr_testing/: datasets_to_use_for_testing.txt
dev_ocr/documentation/: dev_ocr_codebase_reference_for_llm.md
dev_ocr/documentation/entries/: 2026-05-25-groq-vlm-provider.md  2026-05-25-vlm-output-cleanup.md  2026-05-25-workers-ocr-integration-tests.md  2026-05-25-workers-ocr.md
dev_ocr/notebook_crées/: tentatif_craft.ipynb
dev_ocr/scripts/: add_entry_to_documentation.py  benchmark_vlm.py  download_datasets.py  download_moondream_weights.py  rename_ticket_images.py  run_vlm_test.py  smoke_test_ocr.py  test_extract_receipt.py  test_groq_receipt.py
dev_ocr/src/receipt_ocr/: __init__.py  constants.py  env.py  exceptions.py  extract_receipt.py  image_utils.py  parser.py  vlm_image_prep.py  vlm_parse.py  vlm_text_cleanup.py  vlm_validate.py
dev_ocr/src/receipt_ocr/backends/: __init__.py  base.py  easyocr_backend.py  paddle_backend.py  ppocr_v4_backend.py  tesseract_backend.py  vlm_backend.py
dev_ocr/src/receipt_ocr/backends/vlm/: __init__.py  base.py  extraction.py  groq_provider.py  moondream_provider.py  multipass.py  prompts.py  registry.py
dev_ocr/tests/: test_extract_receipt.py  test_groq_integration.py  test_groq_provider.py  test_integration_real_images.py  test_paddle_backend.py  test_parser.py  test_parser_vlm_json.py  test_ppocr_v4_backend.py  test_vlm_backend.py  test_vlm_extraction.py  test_vlm_image_prep.py  test_vlm_moondream_provider.py  test_vlm_multipass.py  test_vlm_parse.py  test_vlm_text_cleanup.py  test_vlm_validate.py
dev_ocr/tests/fixtures/: sample_texts.py  super_u_ocr_text.py  vlm_json.py
docs/: OFF_API_Specification_PriceTracker.md  backend-ocr-worker-handoff-synthetic.md  backend-ocr-worker-handoff.md  pricetracker-docs-context.md  setup-gcp.md
frontend/: .dockerignore  .env.example  Dockerfile  cloudbuild.yaml  next.config.mjs  package-lock.json  package.json
infra/: README.md
local_pipeline/: README_TRANSFORMATIONS.md  __init__.py  bronze.py  gold.py  requirements.txt  run_pipeline.py  silver.py  silver_enrichments.py
scripts/: deploy.sh  run_tests.sh
shared/: bq_io.py  bq_schema.py  bq_setup.py  cleaner.py  config.py  hf_mapping.py  monitoring.py  orchestration.py  signals.py
src/: etape1_construire_dictionnaire.py  etape1_construire_dictionnaire_ancien1.py  etape1_construire_dictionnaire_ancien2.py  etape1_construire_dictionnaire_ancien3.py  etape1_construire_dictionnaire_llm1.py  etape2_matcher_ticket.py
terraform/: bigquery_gold.tf  bigquery_silver.tf  cloud_run.tf  cloud_run_iam.tf  cloud_scheduler.tf  gcs.tf  main.tf  outputs.tf  variables.tf
worker_alertes/: Dockerfile  main.py  requirements.txt
worker_indices/: Dockerfile  main.py
worker_ingestion/: Dockerfile  download_open_prices.py  main.py  requirements.txt
worker_off/: Dockerfile  main.py  off_api.py  requirements.txt
workers/indices/: .gcloudignore  Dockerfile  README.md  cloudbuild.yaml  pyproject.toml
workers/indices/pricetracker_indices/: __init__.py  auth.py  bq.py  config.py  logging.py  main.py
workers/indices/tests/: conftest.py  test_bq.py  test_main.py
workers/ocr/: .dockerignore  .gcloudignore  Dockerfile  README.md  cloudbuild.yaml  cursor_prompt_ocr_worker.md  ocr-worker-contract.md  prompt_for_ocr_worker_development.md  pyproject.toml
workers/ocr/pricetracker_ocr/: __init__.py  auth.py  config.py  gcs.py  logging.py  main.py  mapper.py  ocr.py  pg.py  pubsub.py
workers/ocr/tests/: conftest.py  test_mapper.py  test_pg.py  test_pubsub.py  test_push_endpoint.py
workers/ocr/tests/fixtures/: pubsub_envelope.json
workers/off/: .dockerignore  .gcloudignore  Dockerfile  README.md  cloudbuild.yaml  pyproject.toml
workers/off/pricetracker_off/: bq.py  config.py  logging.py  off_client.py  ratelimit.py
workers/off/src/: main.py  off_client.py  pg.py  vertex.py
workers/off/tests/: test_main.py  test_off_client.py  test_ratelimit.py
(+172 files in other folders)
