[project]
name = "pricetracker-api"
version = "0.1.0"
description = "PriceTracker backend FastAPI — API + Firebase Auth + Signed URLs + BigQuery + Cloud SQL pgvector."
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "Proprietary" }
authors = [{ name = "PriceTracker" }]

dependencies = [
    "fastapi==0.115.5",
    "uvicorn[standard]==0.32.1",
    "pydantic==2.10.3",
    "pydantic-settings==2.6.1",
    "structlog==24.4.0",
    "sqlalchemy[asyncio]==2.0.36",
    "asyncpg==0.30.0",
    "alembic==1.14.0",
    "firebase-admin==6.6.0",
    "google-cloud-storage==2.19.0",
    "google-cloud-bigquery==3.27.0",
    "google-auth==2.36.0",
]

[dependency-groups]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
    "httpx==0.28.1",
    "testcontainers[postgres]==4.9.0",
    "ruff==0.8.4",
    "pyright==1.1.391",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pricetracker_api"]

[tool.uv]
package = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra -q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]
# B008 : FastAPI utilise `= Depends(...)`, `= Query(...)`, `= Header(...)`
# en valeur par défaut comme idiome standard — pas un bug.
ignore = ["E501", "B008"]

[tool.pyright]
include = ["pricetracker_api", "tests"]
pythonVersion = "3.11"
typeCheckingMode = "basic"
