[project]
name = "pricetracker-ocr"
version = "0.1.0"
description = "PriceTracker worker OCR — Pub/Sub push, receipt extraction, Cloud SQL."
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "Proprietary" }
authors = [{ name = "PriceTracker" }]

dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "google-cloud-storage>=2.16",
    "google-auth>=2.36.0",
    "asyncpg>=0.29",
    "pydantic>=2.10",
    "pydantic-settings>=2.2",
    "structlog>=24.1",
    "groq>=0.13",
    "Pillow>=10.0",
    "json-repair>=0.30",
    "python-dotenv>=1.0",
    "receipt-ocr",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.28",
    "testcontainers[postgres]>=4.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pricetracker_ocr"]

[tool.uv]
package = true

[tool.uv.sources]
receipt-ocr = { path = "../../dev_ocr" }

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra -q"
markers = [
    "integration: tests requiring Docker (testcontainers Postgres).",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]
ignore = ["E501"]
