[project]
name = "pricetracker-off"
version = "0.1.0"
description = "PriceTracker worker OFF — enrichissement EAN via OpenFoodFacts + embeddings Vertex AI."
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "Proprietary" }
authors = [{ name = "PriceTracker" }]

dependencies = [
    "fastapi==0.115.5",
    "uvicorn[standard]==0.32.1",
    "pydantic==2.10.3",
    "pydantic-settings==2.6.1",
    "structlog==24.4.0",
    "httpx==0.28.1",
    "asyncpg==0.30.0",
    "google-cloud-bigquery==3.27.0",
    "google-cloud-aiplatform==1.74.0",
    "google-auth==2.36.0",
    "tenacity==9.0.0",
]

[dependency-groups]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
    "pytest-httpx==0.35.0",
    "ruff==0.8.4",
    "pyright==1.1.391",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
package = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra -q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]
ignore = ["E501"]

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.11"
typeCheckingMode = "basic"
